// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RDS DB Selector Modal should display message for selecting region 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          ce.co.autoStoppingRule.configuration.rdsModal.title
        </p>
      </div>
      <div
        class="sectionSeparator"
      />
      <div
        class="Layout--vertical StyledProps--main"
        style="padding-top: 20px;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
          style="max-width: 40%;"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main filterLabel StyledProps--font-variation-form-label"
            >
              ce.co.autoStoppingRule.configuration.instanceModal.labels.selectRegion
            </p>
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="rdsRegion"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sectionSeparator"
      />
      <div
        class="StyledProps--font StyledProps--main"
        style="min-height: 250px;"
      >
        <div
          class="Layout--horizontal StyledProps--main searchAndFilterWrapper"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main searchContainer  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
            data-name=""
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--filter"
              dir="auto"
              placeholder="Search"
              style="padding-right: 38px;"
              type="search"
              value=""
            />
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
              data-icon="execution-warning"
            >
              <svg
                height="20"
                viewBox="0 0 19 15"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  color="#fff"
                  d="M15.964 15H3.027C.702 15-.737 12.787.392 11.021L6.29 1.339c1.152-1.785 5.261-1.785 6.412 0l5.897 9.682C19.75 12.768 18.288 15 15.964 15z"
                />
                <path
                  d="M4.23 13.75h10.408c1.713 0 2.79-1.77 1.941-3.157l-5.22-8.53c-.848-1.417-3.002-1.417-3.85 0l-5.22 8.53c-.832 1.402.229 3.157 1.941 3.157zm5.22-1.894c-.456 0-.832-.354-.832-.785 0-.431.376-.786.832-.786.457 0 .832.354.816.801.016.416-.375.77-.816.77zm-.212-7.083c.392-.093.8.092.963.446.049.123.081.247.081.385-.016.385-.049.785-.081 1.17-.033.601-.082 1.217-.114 1.817-.017.2-.017.37-.017.57a.6.6 0 01-.62.57c-.342 0-.603-.231-.62-.554-.048-.94-.114-1.879-.163-2.818l-.049-.755a.82.82 0 01.62-.831z"
                />
              </svg>
            </span>
            ce.co.autoStoppingRule.configuration.rdsModal.emptyDescription
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <button
          class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-primary"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            ce.co.autoStoppingRule.configuration.addSelectedBtnText
          </span>
        </button>
        <div>
          <span
            class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="refresh"
          >
            <svg
              data-icon="refresh"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                refresh
              </desc>
              <path
                d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            style="margin: 0px 5px; cursor: pointer;"
          >
            ce.common.refresh
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RDS DB Selector Modal should fill in region display list of databases 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          ce.co.autoStoppingRule.configuration.rdsModal.title
        </p>
      </div>
      <div
        class="sectionSeparator"
      />
      <div
        class="Layout--vertical StyledProps--main"
        style="padding-top: 20px;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
          style="max-width: 40%;"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main filterLabel StyledProps--font-variation-form-label"
            >
              ce.co.autoStoppingRule.configuration.instanceModal.labels.selectRegion
            </p>
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="rdsRegion"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value="us-east-1"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="bp3-overlay bp3-overlay-inline"
              >
                <div
                  class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                >
                  <div
                    class="bp3-popover bp3-minimal bp3-select-popover Select--popover"
                  >
                    <div
                      class="bp3-popover-content"
                    >
                      <div>
                        <ul
                          class="bp3-menu"
                        >
                          <li
                            class="Select--menuItem Select--active"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                              style="--text-line-clamp: 1;"
                            >
                              us-east-1
                            </p>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sectionSeparator"
      />
      <div
        class="StyledProps--font StyledProps--main"
        style="min-height: 250px;"
      >
        <div
          class="Layout--horizontal StyledProps--main searchAndFilterWrapper"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main searchContainer  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
            data-name=""
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--filter"
              dir="auto"
              placeholder="Search"
              style="padding-right: 38px;"
              type="search"
              value=""
            />
          </div>
        </div>
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                ID
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                name
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                status
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                TYPE
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          />
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
      >
        <button
          class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-primary"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            ce.co.autoStoppingRule.configuration.addSelectedBtnText
          </span>
        </button>
        <div>
          <span
            class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="refresh"
          >
            <svg
              data-icon="refresh"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                refresh
              </desc>
              <path
                d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            style="margin: 0px 5px; cursor: pointer;"
          >
            ce.common.refresh
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
